--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <h1>Anguflix</h1>
           <form>
             <div class="col-xs-6">
-              <input class="form-control" type="search" name="search" placeholder="Search by title">
+              <input class="form-control" type="search" name="search" placeholder="Search by title" ng-model="searchText">
             </div>
             <div class="col-xs-6">
               <select class="form-control">
@@ -31,8 +31,15 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="mycollection">
-            <div class="col-xs-4">
-                  Choose a movie from below to add to collection.
+          <h1>My Collection</h1>
+            <div ng-repeat="movie in collection">
+                <div class="col-xs-4">
+                  <div class="movie" ng-click="removeFromCollection(movie)">
+                    <img class="img-responsive" src="{{movie.image}}">
+                    <h3>{{movie.name}}</h3>
+                    <p>{{movie.description}}</p>
+                  </div>
+                </div>
             </div>
           </div>
         </div>
@@ -42,9 +49,9 @@
         <div class="col-xs-12">
           <div class="allmovies">
           <h1>All Movies</h1>
-            <div ng-repeat="movie in movies">
+            <div ng-repeat="movie in movies | filter:searchText">
                 <div class="col-xs-4">
-                  <div class="movie">
+                  <div class="movie" ng-click="addToCollection(movie)">
                   <img class="img-responsive" src="{{movie.image}}">
                   <h3>{{movie.name}}</h3>
                   <p>{{movie.description}}</p>
